project/tests/in_progress/for_main/good/functions/func005_add_inc_inc.c
#include <stdio.h>

int foo(int x) {
  int y = x++ + x++;
  return y;
}

int main() {
  int v = foo(5);
  printf("v = %d\n", v);
  return 0;
}
